--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,13 @@
 [package]
 name = "teljari"
-version = "0.1.0"
+version = "1.0.0"
+authors = ["stscoundrel / Sampo Silvennoinen"]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/stscoundrel/teljari-rs"
+description = """
+Print arrays with commas and conjunctions for human consumption.
+"""
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
