--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 jobs:
   build_and_test:
     name: Build project
-    runs-on: ['ubuntu-latest', 'macos-latest', 'windows-latest']
+    runs-on: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
