--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,10 @@ Name: Rust - Build
 on: [pull_request]
 
 jobs:
-  runs-on: [ubuntu-latest, macos-latest, windows-latest]
+  runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
   steps:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
